--- a/template/package.json
+++ b/template/package.json
@@ -6,12 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "i": "^0.3.7",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "util": "^0.12.5",
